--- a/dev.env
+++ b/dev.env
@@ -6,6 +6,7 @@ REDIS_PORT=6379
 REDIS_DB=0
 
 MYSQL_HOST=localhost
-MYSQL_PASSWORD=
-MYSQL_PORT=3036
+MYSQL_USER=root
+MYSQL_PASSWORD=qwerty123
+MYSQL_PORT=3306
 MYSQL_DB_NAME=interactify
