--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,58 @@
 asgiref==3.6.0
+async-timeout==4.0.2
+attrs==22.2.0
+autobahn==23.1.2
+Automat==22.10.0
 backports.zoneinfo==0.2.1
-Django==4.2
+black==23.3.0
+cachetools==5.3.0
+certifi==2022.12.7
+cffi==1.15.1
+channels==3.0.5
+channels-redis==4.1.0
+charset-normalizer==3.1.0
+click==8.1.3
+constantly==15.1.0
+cryptography==40.0.1
+daphne==3.0.2
+Django==3.0.1
+django-environ==0.10.0
+django-gmailapi-backend==0.3.2
+django-redis==5.2.0
+google-api-core==2.11.0
+google-api-python-client==2.84.0
+google-auth==2.17.2
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.59.0
+httplib2==0.22.0
+hyperlink==21.0.0
+idna==3.4
+incremental==22.10.0
+msgpack==1.0.5
+msgpack-python==0.5.6
+mypy-extensions==1.0.0
+packaging==23.0
+pathspec==0.11.1
+platformdirs==3.2.0
+protobuf==4.22.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+PyMySQL==1.0.3
+pyOpenSSL==23.1.1
+pyparsing==3.0.9
+pytz==2023.3
+redis==4.5.4
+requests==2.28.2
+rsa==4.9
+sentry-sdk==1.19.1
+service-identity==21.1.0
+six==1.16.0
 sqlparse==0.4.3
+tomli==2.0.1
+Twisted==22.10.0
+txaio==23.1.1
+typing_extensions==4.5.0
+uritemplate==4.1.1
+urllib3==1.26.15
+zope.interface==6.0
