--- a/dev.env
+++ b/dev.env
@@ -7,6 +7,6 @@ REDIS_DB=0
 
 MYSQL_HOST=localhost
 MYSQL_USER=root
-MYSQL_PASSWORD=qwerty123
+MYSQL_PASSWORD=
 MYSQL_PORT=3306
 MYSQL_DB_NAME=interactify
