--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ constantly==15.1.0
 cryptography==40.0.1
 daphne==3.0.2
 Django==3.0.1
+django-cors-headers==1.2.0
 django-environ==0.10.0
 django-gmailapi-backend==0.3.2
 django-redis==5.2.0
